added dynamo in test mode